--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@monaco-editor/react": "^4.6.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.12.1",
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "next": "14.2.1",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
     "react-split": "^2.0.14",
     "zod": "^3.22.4"
