--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@monaco-editor/react": "^4.6.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.12.1",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.372.0",
     "monaco": "^1.201704190613.0",
     "monaco-editor": "^0.47.0",
     "next": "14.2.1",
@@ -26,7 +32,9 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
     "react-split": "^2.0.14",
-    "zod": "^3.22.4"
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
