--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@monaco-editor/react": "^4.6.0",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@octokit/core": "^5.2.0",
     "@prisma/client": "^5.12.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
@@ -25,11 +26,15 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "lucide-react": "^0.372.0",
+    "i": "^0.3.7",
     "monaco": "^1.201704190613.0",
     "monaco-editor": "^0.47.0",
     "next": "14.2.1",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "npm": "^10.5.2",
+    "octokit": "^3.2.0",
+    "octokit-plugin-create-pull-request": "^5.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
