--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@octokit/core": "^5.2.0",
     "@prisma/client": "^5.12.1",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "i": "^0.3.7",
     "monaco": "^1.201704190613.0",
     "monaco-editor": "^0.47.0",
     "next": "14.2.1",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "npm": "^10.5.2",
+    "octokit": "^3.2.0",
+    "octokit-plugin-create-pull-request": "^5.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
