--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@mapbox/node-pre-gyp": "^1.0.11",
     "@monaco-editor/react": "^4.6.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@octokit/core": "^5.2.0",
@@ -25,11 +26,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
-    "lucide-react": "^0.372.0",
     "i": "^0.3.7",
+    "lucide-react": "^0.372.0",
     "monaco": "^1.201704190613.0",
     "monaco-editor": "^0.47.0",
-    "next": "14.2.1",
+    "next": "^14.3.0-canary.13",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "npm": "^10.5.2",
@@ -53,9 +54,10 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.1",
+    "html-loader": "^5.0.0",
     "postcss": "^8",
     "prisma": "^5.12.1",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
 }
