--- a/package.json
+++ b/package.json
@@ -31,12 +31,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
-    "html-react-parser": "^5.1.10",
     "i": "^0.3.7",
     "lucide-react": "^0.372.0",
     "monaco": "^1.201704190613.0",
     "monaco-editor": "^0.47.0",
-    "next": "14.2.1",
+    "next": "^14.3.0-canary.13",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "npm": "^10.5.2",
@@ -60,9 +59,10 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.1",
+    "html-loader": "^5.0.0",
     "postcss": "^8",
     "prisma": "^5.12.1",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
 }
