--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
+    "react-slick": "^0.30.2",
     "react-split": "^2.0.14",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.5",
