--- a/package.json
+++ b/package.json
@@ -10,10 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^41.3.1",
-    "@ckeditor/ckeditor5-react": "^6.2.0",
     "@hookform/resolvers": "^3.3.4",
-    "@mdxeditor/editor": "^2.20.7",
     "@monaco-editor/react": "^4.6.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@octokit/core": "^5.2.0",
@@ -23,9 +20,6 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
-    "@tiptap/pm": "^2.3.0",
-    "@tiptap/react": "^2.3.0",
-    "@tiptap/starter-kit": "^2.3.0",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
@@ -35,7 +29,7 @@
     "lucide-react": "^0.372.0",
     "monaco": "^1.201704190613.0",
     "monaco-editor": "^0.47.0",
-    "next": "^14.3.0-canary.13",
+    "next": "14.3.0-canary.13",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "npm": "^10.5.2",
