--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.0.0",
     "@hookform/resolvers": "^3.3.4",
     "@monaco-editor/react": "^4.6.0",
-    "@next-auth/prisma-adapter": "^1.0.7",
     "@octokit/core": "^5.2.0",
     "@prisma/client": "^5.12.1",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -22,7 +22,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.6.8",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "i": "^0.3.7",
@@ -30,7 +30,7 @@
     "monaco": "^1.201704190613.0",
     "monaco-editor": "^0.47.0",
     "next": "^14.2.3",
-    "next-auth": "^4.24.7",
+    "next-auth": "^5.0.0-beta.17",
     "next-themes": "^0.3.0",
     "npm": "^10.5.2",
     "octokit": "^3.2.0",
@@ -45,11 +45,13 @@
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5",
     "zod": "^3.22.5",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18",
