--- a/package.json
+++ b/package.json
@@ -47,8 +47,7 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
     "xlsx": "^0.18.5",
-    "zod": "^3.22.5",
-    "zustand": "^4.5.2"
+    "zod": "^3.22.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
