--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "i": "^0.3.7",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.372.0",
     "monaco": "^1.201704190613.0",
     "monaco-editor": "^0.47.0",
