--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "octokit": "^3.2.0",
     "octokit-plugin-create-pull-request": "^5.1.1",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
     "react-slick": "^0.30.2",
     "react-split": "^2.0.14",
+    "react-use": "^17.5.0",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
