--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.2",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "i": "^0.3.7",
