--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chartjs-adapter-date-fns": "^3.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "i": "^0.3.7",
     "lodash": "^4.17.21",
     "lucide-react": "^0.372.0",
