--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.12",
     "lodash": "^4.17.21",
     "lucide-react": "^0.372.0",
     "monaco": "^1.201704190613.0",
