--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "lms",
-  "version": "0.1.0",
+  "name": "tutly",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -29,7 +29,6 @@
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.2",
-    "chartjs-adapter-date-fns": "^3.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
@@ -42,9 +41,7 @@
     "next-auth": "^5.0.0-beta.17",
     "next-themes": "^0.3.0",
     "octokit": "^3.2.0",
-    "octokit-plugin-create-pull-request": "^5.1.1",
     "react": "^18",
-    "react-chartjs-2": "^5.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
@@ -53,8 +50,6 @@
     "react-onesignal": "^3.0.1",
     "react-resizable-panels": "^2.0.19",
     "react-slick": "^0.30.2",
-    "react-split": "^2.0.14",
-    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
