--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,6 @@
     },
     "target": "ES2017"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts","types/next-auth.d.ts", "src/components/AssigmentList.tsx", "src/app/(dashboard)/assignments/new/MarkDownEditor.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts","types/next-auth.d.ts"],
   "exclude": ["node_modules"]
 }
