--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.12",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.372.0",
     "monaco": "^1.201704190613.0",
