--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.0.0",
     "@codesandbox/sandpack-react": "^2.13.10",
+    "@ducanh2912/next-pwa": "^10.2.8",
     "@hookform/resolvers": "^3.3.4",
     "@monaco-editor/react": "^4.6.0",
     "@next/third-parties": "^14.2.5",
@@ -74,6 +75,7 @@
     "postcss": "^8",
     "prisma": "^5.12.1",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack": "^5.94.0"
   }
 }
