--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "eslint . --fix",
     "seed": "node ./prisma/seed.ts",
     "postinstall": "prisma generate",
     "format": "prettier --write .",
@@ -36,6 +37,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.12",
+    "eslint-plugin-tailwindcss": "^3.17.4",
     "geist": "^1.3.0",
     "husky": "^9.1.6",
     "jspdf": "^2.5.1",
