--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@astrojs/tailwind": "^5.1.2",
     "@auth/prisma-adapter": "^2.7.3",
     "@hookform/resolvers": "^3.9.1",
+    "@lukeed/ms": "^2.0.2",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -42,7 +43,6 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "arctic": "^2.0.0-next.9",
-    "@lukeed/ms": "^2.0.2",
     "astro": "^4.16.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -58,6 +58,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "recharts": "^2.13.2",
+    "resend": "^4.0.1-alpha.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
