initial-dashboard-ui

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@astrojs/tailwind": "^5.1.2",
     "@auth/prisma-adapter": "^2.7.3",
     "@hookform/resolvers": "^3.9.1",
+    "@lukeed/ms": "^2.0.2",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -42,8 +43,8 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "arctic": "^2.0.0-next.9",
-    "@lukeed/ms": "^2.0.2",
     "astro": "^4.16.6",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
