--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.2",
     "@auth/prisma-adapter": "^2.7.3",
+    "@codesandbox/sandpack-react": "^2.13.10",
     "@hookform/resolvers": "^3.9.1",
     "@lukeed/ms": "^2.0.2",
+    "@monaco-editor/react": "^4.6.0",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -53,11 +55,13 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-day-picker": "^9.2.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-resizable-panels": "^2.1.6",
     "recharts": "^2.13.2",
     "resend": "^4.0.1-alpha.0",
     "tailwind-merge": "^2.5.4",
