--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@tanstack/react-table": "^8.20.5",
@@ -46,6 +48,7 @@
     "@types/node": "^22.7.7",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "@uiw/react-md-editor": "^4.0.4",
     "arctic": "^2.0.0-next.9",
     "astro": "^4.16.6",
     "axios": "^1.7.7",
@@ -56,6 +59,9 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
+    "katex": "^0.16.15",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
@@ -66,11 +72,13 @@
     "react-icons": "^5.3.0",
     "react-resizable-panels": "^2.1.6",
     "recharts": "^2.13.2",
+    "rehype-rewrite": "^4.0.2",
     "resend": "^4.0.1-alpha.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.6.3",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -78,6 +86,7 @@
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
+    "@vite-pwa/astro": "^0.4.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.0.0",
     "eslint-plugin-astro": "^0.31.0",
