--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "build": "astro check && prisma generate && astro build",
     "preview": "astro preview",
     "astro": "astro",
     "format": "prettier --write .",
-    "prepare": "husky install",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx,.astro",
-    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx,.astro --fix"
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx,.astro --fix",
+    "prisma:generate": "prisma generate"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
@@ -75,6 +75,7 @@
     "recharts": "^2.13.2",
     "rehype-rewrite": "^4.0.2",
     "resend": "^4.0.1-alpha.0",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
