--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@auth/prisma-adapter": "^2.7.3",
     "@codesandbox/sandpack-react": "^2.13.10",
     "@hookform/resolvers": "^3.9.1",
+    "@lexical/react": "^0.21.0",
     "@lukeed/ms": "^2.0.2",
     "@monaco-editor/react": "^4.6.0",
     "@prisma/client": "^5.22.0",
@@ -65,6 +66,7 @@
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "katex": "^0.16.15",
+    "lexical": "^0.21.0",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
@@ -82,6 +84,7 @@
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.6.3",
+    "use-debounce": "^10.0.4",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
