--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
-    "date-fns": "^3.6.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
@@ -70,11 +70,12 @@
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
-    "react-day-picker": "^9.2.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-phone-number-input": "^3.4.10",
     "react-resizable-panels": "^2.1.6",
     "recharts": "^2.13.2",
     "rehype-rewrite": "^4.0.2",
