--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.2",
     "@auth/prisma-adapter": "^2.7.3",
+    "@aws-sdk/client-s3": "^3.709.0",
+    "@aws-sdk/s3-request-presigner": "^3.709.0",
     "@codesandbox/sandpack-react": "^2.13.10",
     "@hookform/resolvers": "^3.9.1",
     "@lexical/react": "^0.21.0",
@@ -52,11 +54,14 @@
     "@types/node": "^22.7.7",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "@types/uuid": "^10.0.0",
     "@uiw/react-md-editor": "^4.0.4",
     "arctic": "^2.0.0-next.9",
     "astro": "^4.16.6",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
