--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "browser-image-compression": "^2.0.2",
+    "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
