--- a/package.json
+++ b/package.json
@@ -18,15 +18,13 @@
     "@astrojs/node": "^8.3.4",
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.2",
-    "@auth/prisma-adapter": "^2.7.3",
     "@aws-sdk/client-s3": "^3.709.0",
     "@aws-sdk/s3-request-presigner": "^3.709.0",
     "@codesandbox/sandpack-react": "^2.13.10",
     "@hookform/resolvers": "^3.9.1",
     "@lexical/react": "^0.21.0",
-    "@lukeed/ms": "^2.0.2",
     "@monaco-editor/react": "^4.6.0",
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "^6.0.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
@@ -47,14 +45,6 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@tanstack/react-table": "^8.20.5",
-    "@types/bcrypt": "^5.0.2",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/katex": "^0.16.7",
-    "@types/node": "^22.7.7",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
-    "@types/uuid": "^10.0.0",
     "@uiw/react-md-editor": "^4.0.4",
     "arctic": "^2.0.0-next.9",
     "astro": "^4.16.6",
@@ -90,7 +80,6 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.6.3",
     "use-debounce": "^10.0.4",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8"
@@ -98,6 +87,14 @@
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/katex": "^0.16.7",
+    "@types/node": "^22.7.7",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "@vite-pwa/astro": "^0.4.3",
@@ -112,7 +109,8 @@
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.8",
-    "prisma": "^5.22.0"
+    "prisma": "^6.0.1",
+    "typescript": "^5.6.3"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,astro}": [
