--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "build": "astro check && prisma generate && astro build",
     "preview": "astro preview",
     "astro": "astro",
+    "format:check": "prettier --check .",
     "format": "prettier --write .",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx,.astro",
-    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx,.astro --fix",
+    "lint": "eslint ./src",
+    "lint:fix": "eslint ./src --fix",
     "prisma:generate": "prisma generate"
   },
   "dependencies": {
