--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "katex": "^0.16.15",
     "lexical": "^0.21.0",
     "lucide-react": "^0.468.0",
+    "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
     "react-day-picker": "8.10.1",
