--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@tanstack/react-table": "^8.20.5",
-    "@uiw/react-md-editor": "^4.0.4",
     "arctic": "^2.0.0-next.9",
     "astro": "^4.16.6",
     "aws-sdk": "^2.1692.0",
@@ -62,9 +61,9 @@
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
-    "katex": "^0.16.15",
     "lexical": "^0.21.0",
     "lucide-react": "^0.468.0",
+    "marked": "^15.0.3",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
@@ -76,7 +75,6 @@
     "react-phone-number-input": "^3.4.10",
     "react-resizable-panels": "^2.1.6",
     "recharts": "^2.14.1",
-    "rehype-rewrite": "^4.0.2",
     "resend": "^4.0.1-alpha.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.4",
