--- a/package.json
+++ b/package.json
@@ -43,9 +43,10 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
-    "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-toast": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@tanstack/react-table": "^8.20.5",
+    "@vite-pwa/astro": "^0.4.3",
     "arctic": "^2.0.0-next.9",
     "astro": "^4.16.6",
     "aws-sdk": "^2.1692.0",
@@ -81,6 +82,13 @@
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.4",
+    "web-push": "^3.6.7",
+    "workbox-core": "^7.3.0",
+    "workbox-expiration": "^7.3.0",
+    "workbox-precaching": "^7.3.0",
+    "workbox-routing": "^7.3.0",
+    "workbox-strategies": "^7.3.0",
+    "workbox-window": "^7.0.0",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
@@ -95,6 +103,7 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/uuid": "^10.0.0",
+    "@types/web-push": "^3.6.4",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "@vite-pwa/astro": "^0.4.3",
