--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
       "@/*": ["./src/*"],
       "@layouts/*": ["./src/layouts/*"],
       "@lib/*": ["./src/lib/*"]
-    }
+    },
+    "resolveJsonModule": true
   }
 }
