feat: add intial auth setup

--- a/.env.example
+++ b/.env.example
@@ -11,10 +11,11 @@ POSTGRES_URL="postgres://postgres:postgres@localhost:5432/postgres"
 # @see https://next-auth.js.org/configuration/options#secret
 AUTH_SECRET='supersecret'
 
-# Preconfigured Discord OAuth provider, works out-of-the-box
-# @see https://next-auth.js.org/providers/discord
-AUTH_DISCORD_ID=''
-AUTH_DISCORD_SECRET=''
+# Preconfigured Google OAuth provider, works out-of-the-box
+# @see https://www.better-auth.com/docs/authentication/google
+AUTH_GOOGLE_ID=''
+AUTH_GOOGLE_SECRET=''
 
 # The URL of your next js app
-BETTER_AUTH_URL='http://localhost:3000'
+APPLICATION_BASE_URL='http://localhost:3000'
+NEXT_PUBLIC_SIGNUP_ENABLED='true'
