--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -26,6 +26,7 @@
     "@tutly/ui": "workspace:*",
     "@tutly/validators": "workspace:*",
     "geist": "^1.3.1",
+    "lucide-react": "^0.474.0",
     "next": "^14.2.15",
     "react": "catalog:react18",
     "react-dom": "catalog:react18",
