feat: add emails package

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,4 @@ AUTH_GOOGLE_SECRET=''
 # The URL of your next js app
 APPLICATION_BASE_URL='http://localhost:3000'
 NEXT_PUBLIC_SIGNUP_ENABLED='true'
+RESEND_API_KEY="re_123"
