--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -51,7 +51,7 @@
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
     "axios": "^1.8.4",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "browser-image-compression": "^2.0.2",
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
@@ -93,7 +93,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.0.15",
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^3.0.0",
     "@types/node": "^22.13.11",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
