--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,14 +7,9 @@
     "build": "next build",
     "check": "next lint && tsc --noEmit",
     "clean": "git clean -xdf .cache .next .turbo node_modules",
-    "db:generate": "prisma migrate dev",
-    "db:migrate": "prisma migrate deploy",
-    "db:push": "prisma db push",
-    "db:studio": "prisma studio",
     "dev": "next dev --turbo",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
-    "postinstall": "prisma generate",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
@@ -28,7 +23,6 @@
     "@hookform/resolvers": "^4.1.3",
     "@lexical/react": "^0.30.0",
     "@monaco-editor/react": "^4.7.0",
-    "@prisma/client": "^6.5.0",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-collapsible": "^1.1.3",
@@ -50,6 +44,8 @@
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "@tutly/api": "workspace:*",
+    "@tutly/db": "workspace:*",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "browser-image-compression": "^2.0.2",
@@ -103,7 +99,6 @@
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "prisma": "^6.5.0",
     "tailwindcss": "^4.0.15",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0"
