chore: update .env.example and clean up pnpm workspace

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,21 @@
-# database
+# Database
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/tutly_local"
+
+# Environment
+NODE_ENV=development
+
+# AWS Configuration
+AWS_BUCKET_NAME=tutly-local
+AWS_BUCKET_REGION=us-east-1
+AWS_ACCESS_KEY=test
+AWS_SECRET_KEY=test
+AWS_ENDPOINT=http://localhost:4566
+AWS_S3_URL=http://localhost:4566/tutly-local
+
+# Email Service
+RESEND_API_KEY=re_123456
+
+# vapid keys https://vapidkeys.com/
+VAPID_SUBJECT=mailto:dev@tutly.in
+VAPID_PRIVATE_KEY=bm1K6-J0Jvao8lo_M32di0m0e-hQxg4OlR7usWIVG9Q
+NEXT_PUBLIC_VAPID_PUBLIC_KEY=BBdmd8iX5h_y1dwMs-UHTyPBL3CWbfDG7Jf_JMnTuv7Q7l86WdUjYkeMGUlvIEpm3xN_-dcuLWvEcoJ0ULXRWSA
