fix: add Prisma client generation to build process

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -15,14 +15,15 @@
   },
   "license": "AGPL-3.0",
   "scripts": {
-    "build": "tsc",
+    "prisma:generate": "pnpm with-env prisma generate",
+    "build": "pnpm prisma:generate && tsc",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
     "dev": "tsc",
-    "format": "prettier --check . --ignore-path ../../.gitignore",
-    "lint": "eslint",
+    "format": "prettier --write . --ignore-path ../../.gitignore",
+    "lint": "pnpm prisma:generate && eslint",
     "push": "pnpm with-env prisma db push",
     "studio": "pnpm with-env prisma studio",
-    "typecheck": "tsc --noEmit --emitDeclarationOnly false",
+    "typecheck": "pnpm prisma:generate && tsc --noEmit --emitDeclarationOnly false",
     "with-env": "dotenv -e ../../.env --",
     "seed": "pnpm with-env tsx prisma/seed/index.ts"
   },
