chore: cleanup and fix deployment

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,8 @@ RESEND_API_KEY=re_123456
 VAPID_SUBJECT=mailto:dev@tutly.in
 VAPID_PRIVATE_KEY=bm1K6-J0Jvao8lo_M32di0m0e-hQxg4OlR7usWIVG9Q
 NEXT_PUBLIC_VAPID_PUBLIC_KEY=BBdmd8iX5h_y1dwMs-UHTyPBL3CWbfDG7Jf_JMnTuv7Q7l86WdUjYkeMGUlvIEpm3xN_-dcuLWvEcoJ0ULXRWSA
+
+# Turbo Remote Caching
+# Get these from https://vercel.com/account/tokens
+TURBO_TEAM=your-team-name
+TURBO_TOKEN=your-token
