--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -6,11 +6,11 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "default": "./src/index.ts"
+      "default": "./dist/index.js"
     },
     "./client": {
       "types": "./dist/client.d.ts",
-      "default": "./src/client.ts"
+      "default": "./dist/client.js"
     }
   },
   "license": "AGPL-3.0",
@@ -25,7 +25,7 @@
     "studio": "pnpm with-env prisma studio",
     "typecheck": "pnpm prisma:generate && tsc --noEmit --emitDeclarationOnly false",
     "with-env": "dotenv -e ../../.env --",
-    "seed": "pnpm with-env tsx prisma/seed/index.ts"
+    "seed": "pnpm with-env tsx --no-check prisma/seed/index.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
